# EEsizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
agent_test_claude/: 180nm_bulk.txt  agent_claude3.5.ipynb
agent_test_gemini/: gemini_2.0.ipynb  ptm_180.txt  ptm_90.txt
agent_test_gpt/: agent_4o.ipynb  agent_4omini.ipynb  agent_gpt_openai.ipynb  netlist.cir  ptm_130.txt
docs/: agent_gpt_openai_devdoc.txt  optimizer_spec.md
eesizer/: __init__.py  config_models.py  llm.py
eesizer/agents/: base.py  optimizer.py  orchestrator.py
eesizer/analysis/: metrics.py  oplog.py  parsers.py
eesizer/cli/: main.py
eesizer/io/: fs.py  paths.py
eesizer/llm/: __init__.py  base.py  mock.py  planner.py  schemas.py  validate.py
eesizer/netlist/: patch.py  types.py
eesizer/optimize/: base.py
eesizer/reporting/: csv_report.py  plot.py
eesizer/sim/: base.py  netlist_builders.py  ngspice.py
initial_circuit_netlist/: 3stage_opamp.cir  R_load.cir  complementary_classAB_opamp.cir  diode_load.cir  inv.cir  nand.cir  osc3.cir  ota.cir  telescope_cascode.cir  xor.cir
scripts/: headless_optimize.py  test_ngspice_ac.py
tests/: test_headless_runner.py  test_llm_validation.py  test_netlist_patch.py  test_orchestrator_optimize.py
variation/: a5.cir  monte carlo.ipynb
